<resources>
    <string name="app_name">CalmSphereApp</string>
    <string name="calm_sphere">C A L M S P H E R E</string>
    <string name="calm_sphere1">"Making Every Soul Smile"</string>
    <string name="buttonappointment">Book Appointment</string>
    <string name="textviewap2">My Appointments</string>
    <string name="upcoming">Upcoming</string>
    <string name="completed">Completed</string>
    <string name="ramesh">Dr Pryanshu</string>
    <string name="ramesh1">Therapist Specialist</string>
    <string name="reschedule">Reschedule</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="cancel">Cancel</string>
    <string name="select_slot">Select Slot</string>
    <string name="dr_pryanshu">Dr Pryanshu</string>
    <string name="fees">Fees</string>
    <string name="_10_000">₹ 10,000</string>
    <string name="fees1">fees</string>
    <string name="rs_10_000">Rs. 10,000</string>
    <string name="appointment_date">Appointment Date :</string>
    <string name="date1">Date Slot</string>
    <string name="time_slot">Time Slot</string>
    <string name="time_slot1">Time Slot :</string>
    <string name="confirm_appointment">Confirm Appointment</string>
    <string name="apointcheckbox">I have read all the terms and conditions and Agree.</string>
    <string name="descImagebuttonback">backbutton</string>
    <string name="select_package">Select Package</string>
    <string name="select_duration">Select Duration</string>
    <string name="messageicon">messageicon</string>
    <string name="messaging">Messaging</string>
    <string name="money1">Rs. 2,500 per 30 Min</string>
    <string name="next">NEXT</string>
    <string name="voice_call">Voice Call</string>
    <string name="in_person">In Person</string>
    <string name="video_call">Video Call</string>
    <string name="docimage">docimage</string>
    <string name="dr_pawan">Dr Pawan</string>
    <string name="upcoming1">| Upcoming |</string>
    <string name="location">location</string>
    <string name="max_healthcare">MAX Healthcare</string>
    <string name="scheduled_appointment">Scheduled Appointment</string>
    <string name="_2024_04_24">2024/04/24</string>
    <string name="_11_11_a_m">11:11 A.M</string>
    <string name="patient_information">Patient Information</string>
    <string name="name2">Name        :</string>
    <string name="ramesh_kumar">Ramesh Kumar</string>
    <string name="gender">Gender :</string>
    <string name="problem">Problem :</string>
    <string name="_25">25</string>
    <string name="male">Male</string>
    <string name="suffering_from_insonomia">Suffering from Insonomia</string>
    <string name="detailandcancelmaps">detailandcancelmaps</string>
    <string name="cancel1">CANCEL</string>
    <string name="videocallmoney">Rs. 2,000 per 30 Min</string>
    <string name="voicecallmoney">Rs. 1,500 per 30 Min</string>
    <string name="messagingmoney">Rs. 1,000 per 30 Min</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="or">or</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="create_now">Create now</string>
    <string name="relax">Relax!</string>
    <string name="trending">Trending</string>
    <string name="communities">Communities</string>
    <string name="safe_space">Safe Space</string>
    <string name="calmsphere_s_support_channel">CalmSphere\'s Support Channel</string>
    <string name="join_now">Join Now</string>
    <string name="todo">TODO</string>
    <string name="depression_support">Depression Support</string>
    <string name="grief_loss_support">Grief/Loss Support</string>
    <string name="bipolar_support">Bipolar Support</string>
    <string name="anxiety_support">Anxiety Support</string>
    <string name="explore_content">When feeling anxious or scared, facing your fears can be the first step toward relief. Try simple calming exercises to help cope with anxiety and break the cycle of fear and insecurity.</string>
    <string name="_24">24</string>
    <string name="lucknow_india">Lucknow, India</string>
    <string name="dealing_with_anxiety">Dealing with Anxiety</string>
    <string name="a_teaching_learning_and_discussion_based_group_using_cbt_techniques_for_anxiety"><![CDATA[A teaching-learning and discussion based group using CBT techniques for anxiety. ]]></string>
    <string name="take_this_quiz_to_test_your_anxiety">Take this quiz to test your anxiety.</string>
    <string name="few_spots_left">Few spots left!!</string>
    <string name="start_s_on_13th_april_2024">Start’s on 13th April 2024.</string>
    <string name="paid_zoom_sessions_available">Paid Zoom Sessions available.</string>
    <string name="anonymity_20_25_people_group">Anonymity, 20-25 people group.</string>
    <string name="led_by_specialists">Led by Specialists.</string>
    <string name="goals_of_the_group">Goals of the group</string>
    <string name="providing_some_quick_tips_and_suggestions_for_instant_relief">• Providing some quick tips and suggestions for instant relief.</string>
    <string name="guidance_for_dealing_with_anxiety_from_a_trained_professional">• Guidance for dealing with anxiety from a trained professional.</string>
    <string name="who_is_it_for">Who is it for?</string>
    <string name="contact_for_queries">Contact for Queries</string>
    <string name="experiencing_occasional_anxiety_is_a_normal_part_of_life_however_if_you_frequently_have_intense_excessive_and_persistent_worry_and_fear_about_everyday_situations_this_group_is_for_you">Experiencing occasional anxiety is a normal part of life. However if you frequently have intense, excessive and persistent worry and fear about everyday situations, this group is for you.</string>
    <string name="bottom_navigation_view_behavior">com.google.android.material.behavior.HideBottomViewOnScrollBehavior</string>
</resources>