<?xml version="1.0" encoding="utf-8"?>


<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main"
    tools:layout_editor_absoluteX="1dp"
    tools:layout_editor_absoluteY="1dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Detailandcancel">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="114dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="80dp"
            android:layout_marginEnd="10dp"
            app:cardCornerRadius="26dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="52dp"
                    android:layout_height="72.9dp"
                    android:layout_marginStart="44dp"
                    android:layout_marginTop="25dp"
                    android:contentDescription="@string/docimage"
                    android:src="@drawable/smalldocpawan"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <TextView
                    android:id="@+id/displaydoctorname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="30dp"
                    android:fontFamily="@font/poppins_semibold"
                    android:text="@string/dr_pawan"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="-86dp"
                    android:layout_marginTop="50dp"
                    android:fontFamily="@font/poppins_semibold"
                    android:text="@string/upcoming1"
                    android:textColor="#E59500"
                    android:textSize="13sp" />


                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="-84dp"
                    android:layout_marginTop="80dp"
                    android:contentDescription="@string/location"
                    android:src="@drawable/locationicon" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="74dp"
                    android:fontFamily="@font/inter"
                    android:text="@string/max_healthcare" />

            </LinearLayout>


        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="220dp"
            android:text="@string/scheduled_appointment"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:fontFamily="@font/poppins_semibold"
            android:textSize="20sp"/>

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="260dp"
            android:src="@drawable/calender"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/getdatefrombefore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="52dp"
            android:layout_marginTop="264dp"
            android:fontFamily="@font/inter"
            android:text="@string/_2024_04_24"
            android:textSize="18sp"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textStyle="bold"/>

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="302dp"
            android:src="@drawable/time"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/gettimefrombefore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="56dp"
            android:layout_marginTop="304dp"
            android:fontFamily="@font/inter"
            android:text="10:00 AM"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="350dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/patient_information"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="83dp"
            android:layout_height="22dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="400dp"
            android:fontFamily="@font/inter"
            android:text="@string/name2"
            android:textSize="18sp"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/patientinfoname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="105dp"
            android:layout_marginTop="400dp"
            android:fontFamily="@font/poppins"
            android:text="@string/ramesh_kumar"
            android:textSize="18sp"
            android:textColor="#344154"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="438dp"
            android:fontFamily="@font/inter"
            android:text="Age: "
            android:textSize="18sp"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/patientinfoage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="105dp"
            android:layout_marginTop="438dp"
            android:fontFamily="@font/poppins"
            android:text="@string/_25"
            android:textSize="18sp"
            android:textColor="#344154"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/textView6"
            android:layout_width="83dp"
            android:layout_height="22dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="476dp"
            android:fontFamily="@font/inter"
            android:text="@string/gender"

            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/patientinfogender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="105dp"
            android:layout_marginTop="476dp"
            android:fontFamily="@font/poppins"
            android:text="@string/male"
            android:textSize="18sp"
            android:textColor="#344154"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textStyle="bold"/>


        <TextView
            android:layout_width="83dp"
            android:layout_height="22dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="514dp"
            android:fontFamily="@font/inter"
            android:text="@string/problem"
            android:textSize="18sp"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/patientinfoproblem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="105dp"
            android:layout_marginTop="514dp"
            android:fontFamily="@font/poppins"
            android:text="@string/suffering_from_insonomia"
            android:textSize="18sp"
            android:textColor="#344154"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textStyle="bold"/>

        <!--            <fragment-->
        <!--                android:layout_width="match_parent"-->
        <!--                android:layout_height="150dp"-->
        <!--                android:layout_marginTop="564dp"-->
        <!--                app:layout_constraintTop_toTopOf="parent"-->
        <!--                tools:layout_editor_absoluteX="0dp"-->
        <!--                android:layout_marginStart="10dp"-->
        <!--                android:layout_marginEnd="10dp"-->
        <!--                android:id="@+id/map"-->
        <!--                />-->

        <Button
            android:id="@+id/cancelbutton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="660dp"
            android:backgroundTint="#EC0606"
            android:fontFamily="@font/inter"
            android:text="@string/cancel1"
            android:textSize="20sp"
            android:layout_marginEnd="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <ImageButton
            android:id="@+id/backbutton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="28dp"
            android:background="#ffffff"
            android:src="@drawable/back_arrow_ios"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
